--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,8 +20,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer components {
+  .wrapper {
+    @apply md:max-w-[1440px] w-[100%] mx-auto;
+  }
+}
+
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .root-px {
+    @apply px-3 md:px-12;
+  }
+  .tr-all-300 {
+    @apply transition-all duration-300;
+  }
+  .tr-transform-300 {
+    @apply transition-transform duration-300;
   }
 }
